# fastapi-base-graphql

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.semaphore.yml  docker-compose.yml  pyproject.toml  setup.cfg
.semaphore/: heroku.yml  semaphore.yml
alembic/: env.py
alembic/versions/: 0b61122b0d90_fist_init.py  1b970771d0eb_first_init.py  2608f6eddfb8_back_populates_fix.py  262cbbc45a98_delete_is_superuser_field.py  adf1d6be83ae_first_init.py
app/: main.py
app/api/: deps.py
app/core/: __init__.py  config.py  extensions.py  permissions.py  security.py  storages.py  tokens.py
app/crud/: __init__.py  base.py  crud_activity.py  crud_refresh_token.py  crud_user.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/graphql/: schema.py
app/graphql/core/: type.py  types.py
app/graphql/core/relay/: fields.py  node.py
app/graphql/inputs/: __init__.py  authentication.py  aws.py  users.py
app/graphql/mutations/: authentication.py  aws.py  users.py
app/graphql/queries/: authentication.py  users.py
app/graphql/types/: authentication.py  users.py
app/models/: __init__.py  refresh_token.py  user.py  user_activity.py
app/schemas/: __init__.py  aws_upload.py  jwt_payload.py  refresh_token.py  user.py  user_activity.py
config/: .env.example
docker/fastapi/: Dockerfile
tests/: conftest.py  test_test.py
