[tool.poetry]
name = "FastAPI base"
version = "0.1.0"
description = ""
authors = ["RamilAbzalov <ramil.abzalov@scalewill.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.1"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
Jinja2 = "^3.0.3"
psycopg2-binary = "^2.9.3"
boto3 = "^1.21.22"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
